grammar.js
    source_file: ($) =>
      repeat(
        choice(
          $.use_declaration,
          $.catalog_contribution,
          $.enum_definition,
          $.protocol_definition,
          $.extension_definition,
          $.structure_definition,
          $.function_definition,
          $.test_definition,
          $.foreign_function_declaration,
          $.native_function_declaration,
          $.native_resource_declaration,
          $.public_declaration,
          $.package_declaration,
          $.module_declaration,
          $.local_declaration,
        ),
      ),

    structure_definition: ($) =>
      seq(
        choice(
          seq(optional(field("structure_modifier", "static")), "struct"),
          seq(optional(field("class_modifier", choice("static", "intrinsic", "nocopy"))), "class"),
        ),
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameter_list)),
        optional(
          seq(
            ":",
            field(
              "supertypes",
              seq($.named_type, repeat(seq(",", $.named_type))),
            ),
          ),
        ),
        "{",
        repeat(
          choice(
            seq(
              optional(field("visibility", choice("private", "package", "module", "local", "protected", "public"))),
              $.structure_definition,
            ),
            seq(
              optional(field("visibility", choice("private", "package", "module", "local", "protected", "public"))),
              optional(field("static", "static")),
              $.structure_field,
            ),
            seq(optional(field("visibility", choice("private", "package", "module", "local", "protected", "public"))), $.constructor_definition),
            $.drop_definition,
            seq(
              optional(field("override", "override")),
              optional(field("visibility", choice("private", "package", "module", "local", "protected", "public"))),
              optional(field("static", "static")),
              $.function_definition,
            ),
          ),
        ),
        "}",
      ),

    structure_field: ($) =>
      seq(
        field("mutability", choice("let", "var")),
        field("name", $.identifier),
        ":",
        field("type", $.type),
        optional(seq("=", field("default", $.expression))),
        choice(
          choice(";", $._automatic_semicolon),
          field("accessors", $.property_accessor_block),
        ),
      ),

    function_definition: ($) =>
      seq(
        "func",
        field("name", choice($._contextual_member_name, $.operator_function_name)),
        optional(field("type_parameters", $.type_parameter_list)),
        $.parameter_list,
        optional(field("return_type", choice($.void_type, $.borrowed_return_type, $.type))),
        choice(field("body", $.block), choice(";", $._automatic_semicolon)),
      ),

    builtin_type: (_) =>
      choice(
        "int",
        "int8",
        "int16",
        "int32",
        "int64",
        "uint",
        "uint8",
        "uint16",
        "uint32",
        "uint64",
        "float",
        "float32",
        "float64",
        "bool",
        "str",
      ),
    type_argument_list: ($) =>
      seq(
        "<",
        choice($.type, $.void_type),
        repeat(seq(",", choice($.type, $.void_type))),
        ">",
      ),
    generic_type: ($) =>
      prec.dynamic(
        1,
        seq(
          field("name", alias(choice($.identifier, $.qualified_name), $.type_identifier)),
          field("arguments", $.type_argument_list),
        ),
      ),
    _expression_generic_type: ($) =>
      prec(
        PREC.member + 1,
        seq(
          field("name", alias(choice($.identifier, $.qualified_name), $.type_identifier)),
          field("arguments", alias($._expression_type_argument_list, $.type_argument_list)),
        ),
      ),
    _expression_qualified_generic_type: ($) =>
      prec.left(
        PREC.member + 3,
        seq(
          field("owner", alias($._expression_generic_type, $.generic_type)),
          repeat1(
            seq(
              ".",
              field(
                "member",
                choice(
                  alias($.identifier, $.type_identifier),
                  alias($._expression_generic_type_segment, $.generic_type_segment),
                ),
              ),
            ),
          ),
        ),
      ),
    named_type: ($) =>
      choice(
        alias(choice($.identifier, $.qualified_name), $.type_identifier),
        $.generic_type,
        $.qualified_generic_type,
      ),
    function_type: ($) =>
      seq(
        "func",
        "(",
        optional(seq($.function_type_parameter, repeat(seq(",", $.function_type_parameter)))),
        ")",
        optional(choice($.void_type, $.type)),
      ),
    function_type_parameter: ($) =>
      seq(
        optional(choice(field("read_reference", "@"), field("mutable_reference", "&"))),
        field("type", $.type),
      ),
    grouped_type: ($) => seq("(", field("type", $.type), ")"),
    optional_type: ($) =>
      prec.left(
        seq(
          field(
            "contained",
            choice($.builtin_type, $.named_type, $.function_type, $.grouped_type, $.array_type, $.view_type, $.optional_type),
          ),
          "?",
        ),
      ),
    array_type: ($) =>
      prec.left(
        seq(
          field("element", choice($.builtin_type, $.named_type, $.function_type, $.grouped_type, $.optional_type)),
          repeat1(choice(seq("[", "]"), seq("[", field("length", $.integer_literal), "]"))),
        ),
      ),
    type: ($) => choice($.optional_type, $.array_type, $.view_type, $.tuple_type, $.grouped_type, $.function_type, $.builtin_type, $.named_type),
    parameter_list: ($) =>
      seq("(", optional(seq($.parameter, repeat(seq(",", $.parameter)))), ")"),

    parameter: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        optional(choice(field("read_reference", "@"), field("mutable_reference", "&"))),
        field("type", $.type),
        optional(seq("=", field("default", $.expression))),
      ),

    block: ($) => seq("{", repeat($.statement), "}"),

    statement: ($) =>
      choice(
        seq(
          choice(
            $.variable_declaration,
            $.assignment_statement,
            $.update_statement,
            $.print_statement,
            $.assert_statement,
            $.panic_statement,
            $.return_statement,
            $.break_statement,
            $.continue_statement,
            $.expression_statement,
          ),
          choice(";", $._automatic_semicolon),
        ),
        $.if_statement,
        $.while_statement,
        $.mutex_statement,
        $.anonymous_scope,
        $.for_statement,
        $.match_expression,
      ),

    variable_declaration: ($) =>
      seq(
        field("mutability", choice("let", "var")),
        choice(
          seq(
            field("name", $.identifier),
            choice(
              seq($.type_annotation, optional(seq("=", field("initializer", $.expression)))),
              seq("=", field("initializer", $.expression)),
            ),
          ),
          seq(field("bindings", $.tuple_binding_pattern), "=", field("initializer", $.expression)),
        ),
      ),

    type_annotation: ($) => seq(":", field("type", choice($.reference_type, $.type))),

    assignment_statement: ($) =>
      seq(
        field("left", choice($.identifier, $.member_expression, $.safe_member_expression, $.index_expression)),
        field("operator", choice("=", "+=", "-=", "*=", "/=", "%=")),
        field("right", $.expression),
      ),

    update_statement: ($) =>
      seq(
        field("argument", choice($.identifier, $.member_expression, $.safe_member_expression, $.index_expression)),
        field("operator", choice("++", "--")),
      ),

    print_statement: ($) =>
      seq(
        field("function", alias("print", $.identifier)),
        "(",
        field("argument", $.expression),
        repeat(seq(",", field("argument", $.expression))),
        ")",
      ),

    assert_statement: ($) =>
      seq(
        field("function", alias("assert", $.identifier)),
        "(",
        field("condition", $.expression),
        optional(seq(",", field("message", $.expression))),
        ")",
      ),

    panic_statement: ($) =>
      seq(
        field("function", alias("panic", $.identifier)),
        "(",
        field("message", $.expression),
        ")",
      ),

    return_statement: ($) => seq("return", optional(field("value", $.expression))),

    expression_statement: ($) =>
      choice(
        $.try_expression,
        $.invocation_expression,
        $.super_method_expression,
        $.safe_member_expression,
        $.cascade_expression,
      ),

    if_statement: ($) =>
      seq(
        "if",
        field("condition", $._condition_header),
        field("body", $.block),
        repeat(field("branch", $.alternative_branch)),
        optional(seq("else", field("alternative", $.block))),
      ),

    alternative_branch: ($) =>
      choice(
        seq(
          "elif",
          field("condition", $._condition_header),
          field("body", $.block),
        ),
        seq(
          "else",
          "if",
          field("condition", $._condition_header),
          field("body", $.block),
        ),
      ),

    while_statement: ($) =>
      seq(
        "while",
        field("condition", $._condition_header),
        field("body", $.block),
      ),

    _condition_header: ($) =>
      choice($.expression, $.conditional_binding, seq("(", $.conditional_binding, ")")),

    conditional_binding: ($) =>
      seq(
        optional(field("mutability", choice("let", "var"))),
        field("name", $.identifier),
        "=",
        field("source", $.expression),
      ),

    expression: ($) =>
      choice(
        $.binary_expression,
        $.try_expression,
        $.copy_expression,
        $.move_expression,
        $.read_reference_expression,
        $.unary_expression,
        $.forced_optional_expression,
        $.mutable_reference_expression,
        $.conversion_expression,
        $.lambda_expression,
        $.match_expression,
        $.invocation_expression,
        $.super_method_expression,
        $.cascade_expression,
        $.sequence_literal,
        $.tuple_expression,
        $.member_expression,
        $.safe_member_expression,
        $.index_expression,
        $.slice_expression,
        $.parenthesized_expression,
        $.string_literal,
        $.float_literal,
        $.integer_literal,
        $.boolean_literal,
        $.null_literal,
        $.self_expression,
        $.identifier,
      ),

    sequence_literal: ($) =>
      seq("[", optional(seq($.expression, repeat(seq(",", $.expression)), optional(","))), "]"),

    field_initializer: ($) =>
      prec.dynamic(2, seq(field("name", $.identifier), ":", field("value", $.expression))),

    member_expression: ($) =>
      choice(
        prec(
          PREC.member + 2,
          seq(
            field("object", alias($._expression_qualified_generic_type, $.qualified_generic_type)),
            ".",
            field("field", $._contextual_member_name),
          ),
        ),
        prec(
          PREC.member + 1,
          seq(
            field("object", alias($._expression_generic_type, $.generic_type)),
            ".",
            field("field", $._contextual_member_name),
          ),
        ),
        prec.left(
          PREC.member,
          seq(
            field(
              "object",
              choice(
                $.identifier,
                $.generic_type,
                $.self_expression,
                $.invocation_expression,
                $.member_expression,
                $.safe_member_expression,
                $.index_expression,
                $.slice_expression,
                $.sequence_literal,
                $.string_literal,
                $.float_literal,
                $.integer_literal,
                $.boolean_literal,
                $.parenthesized_expression,
              ),
            ),
            ".",
            field("field", $._contextual_member_name),
          ),
        ),
      ),

    safe_member_expression: ($) =>
      prec.left(
        PREC.member,
        seq(
          field(
            "object",
            choice(
              $.identifier,
              $.self_expression,
              $.invocation_expression,
              $.member_expression,
              $.safe_member_expression,
              $.index_expression,
              $.slice_expression,
              $.sequence_literal,
              $.string_literal,
              $.float_literal,
              $.integer_literal,
              $.boolean_literal,
              $.null_literal,
              $.parenthesized_expression,
            ),
          ),
          "?.",
          field("field", $._contextual_member_name),
        ),
      ),

    invocation_expression: ($) =>
      choice(
        prec(
          PREC.member + 2,
          seq(
            field("target", alias($._expression_qualified_generic_type, $.qualified_generic_type)),
            "(",
            optional($._invocation_arguments),
            ")",
          ),
        ),
        prec(
          PREC.member + 1,
          seq(
            field("target", alias($._expression_generic_type, $.generic_type)),
            "(",
            optional($._invocation_arguments),
            ")",
          ),
        ),
        seq(
          field(
            "target",
            choice(
              $.identifier,
              $.qualified_name,
              $.generic_type,
              $.parenthesized_expression,
              $.lambda_expression,
              $.member_expression,
              $.safe_member_expression,
              $.index_expression,
            ),
          ),
          "(",
          optional($._invocation_arguments),
          ")",
        ),
      ),

    _invocation_arguments: ($) =>
      seq(
        choice($.expression, $.field_initializer),
        repeat(seq(",", choice($.expression, $.field_initializer))),
        optional(","),
      ),

    index_expression: ($) =>
      prec.left(
        PREC.member,
        seq(
          field(
            "object",
            choice(
              $.identifier,
              $.self_expression,
              $.invocation_expression,
              $.member_expression,
              $.index_expression,
              $.slice_expression,
              $.sequence_literal,
              $.string_literal,
              $.float_literal,
              $.integer_literal,
              $.boolean_literal,
              $.parenthesized_expression,
            ),
          ),
          "[",
          field("index", $.expression),
          "]",
        ),
      ),

    unary_expression: ($) =>
      prec(PREC.unary, seq(field("operator", choice("!", "-")), field("operand", $.expression))),

    try_expression: ($) =>
      prec.right(
        PREC.unary,
        seq(
          "try",
          field("operand", $.expression),
          optional(
            seq(
              optional($._try_else_continuation),
              "else",
              choice(
                field("alternative", $.block),
                seq(
                  field("binding", alias("error", $.identifier)),
                  choice(
                    field("alternative", $.block),
                    field("message", $.expression),
                  ),
                ),
              ),
            ),
          ),
        ),
      ),

    conversion_expression: ($) =>
      prec.left(
        PREC.conversion,
        seq(field("value", $.expression), "as", field("type", $.type)),
      ),

    parenthesized_expression: ($) => seq("(", $.expression, ")"),

    _literal_dollar: (_) => token.immediate("$"),
